plugins {
    id 'java'
    id 'jacoco'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
    alias(libs.plugins.asciidoctor)
}

group = 'chaeso.zip'
version = '0.0.1-SNAPSHOT'
description = 'chaeso-zip'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
    implementation libs.spring.boot.starter.actuator
    implementation libs.micrometer.registry.prometheus
    implementation libs.sentry.spring.boot.starter
    implementation libs.sentry.logback
    implementation libs.spring.boot.starter.data.jpa
    implementation libs.spring.boot.starter.web
    implementation libs.spring.boot.starter.validation
    implementation libs.spring.boot.starter.security
    implementation libs.spring.boot.starter.data.redis
    implementation libs.spring.boot.starter.mail
    implementation libs.springdoc.openapi.ui
    implementation libs.flyway.core
    implementation libs.flyway.postgresql
    implementation libs.jjwt.api
    implementation libs.google.api.client
    implementation libs.aws.sdk.s3
    implementation variantOf(libs.querydsl.jpa) { classifier('jakarta') }
    annotationProcessor variantOf(libs.querydsl.apt) { classifier('jakarta') }
    annotationProcessor libs.jakarta.annotation.api
    annotationProcessor libs.jakarta.persistence.api
    compileOnly libs.lombok
    runtimeOnly libs.postgresql
    runtimeOnly libs.jjwt.impl
    runtimeOnly libs.jjwt.jackson
    annotationProcessor libs.lombok
    testImplementation libs.spring.boot.starter.test
    testImplementation libs.spring.restdocs.mockmvc
    testImplementation libs.spring.security.test
    testImplementation libs.archunit.junit5
    testRuntimeOnly libs.h2
    testImplementation libs.embedded.redis
    testCompileOnly libs.lombok
    testRuntimeOnly libs.junit.platform.launcher
    testAnnotationProcessor libs.lombok
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
    finalizedBy tasks.jacocoTestReport
}

tasks.named('jacocoTestReport') {
    dependsOn tasks.test
    reports {
        xml.required = true
        html.required = true
    }
    classDirectories.setFrom(
        files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                '**/*Application.class',
                '**/config/**',
                '**/dto/**',
                '**/Q*.class'
            ])
        })
    )
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
}
